# conv_code

./: .gitignore  CMakeLists.txt  README.md
data/: example2.txt  recovered_example0.txt  recovered_example2.txt
examples/: burst_error.cpp  spread_error.cpp  storage_file.cpp
exec/: burst_error  spread_error  storage_file
include/: binary_file.h  conv_code.h
src/: binary_file.cpp  conv_code.cpp
